libsql-server/src/http/user/snapshots/sqld__http__user__types__test__parse_named_params.snap
---
source: sqld/src/http/user/types.rs
expression: found
---
{
  "Named": {
    "$real": {
      "Real": 1.23
    },
    ":blob": {
      "Blob": [
        104,
        101,
        108,
        108,
        111,
        10
      ]
    },
    ":bool": {
      "Integer": 0
    },
    ":int": {
      "Integer": 1
    },
    ":null": "Null",
    ":str": {
      "Text": "hello"
    }
  }
}
